--- a/src/App.scss
+++ b/src/App.scss
@@ -7,12 +7,14 @@
   display: flex;
   justify-content: space-around;
   border: 1px solid black;
-  padding: 50px;
-  background-color: gray;
+  padding: 30px;
+  background-color: red;
 }
-
 h1 {
   text-align: center;
+}
+p {
+  color:white; 
 }
 
 
